--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mann2108/pern-stack-form.git"
+  },
   "author": "Mann",
   "license": "ISC",
   "dependencies": {
